--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="assets/icon/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/Bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css" />
   </head>
   <body>
 
@@ -34,23 +35,122 @@
       </section>
     </div>
 
-    <!-- CONTEÚDO -->
+    <!-- CONTEUDO -->
     <div class="container">
       <div class="row">
         <!-- SIDEBAR -->
-        <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12 sidebar">
+        <section class="col-xl-3 col-lg-4 col-md-12 col-sm-12 sidebar">
           <div class="habilidades">
-
+            <label>
+              <img src="assets/img/habilidades.png" alt="Habilidades">
+              Habilidades
+            </label>
           </div>
-        </div>
+          <div class="bloco-habilidades">
+            <!-- HABILIDADES -->
+            <label>HTML</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>CSS</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 70%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>Javascript</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 80%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>Bootstrap</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 73%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>SQL</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 77%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>Node.Js</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 72%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>C#</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 85%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>ASP.NET MVC5</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 75%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>Java</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 82%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <!-- IDIOMAS -->
+          <div class="idiomas">
+            <label>
+              <img src="assets/img/idioma.png" alt="Idiomas">
+              Idiomas
+            </label>
+          </div>
+          <div class="bloco-idioma"> 
+            <label>Português</label>
+              <div class="progress">
+                <div class="nivel" role="progressbar" style="width: 100%"></div>
+              </div>
+              <label>Inglês</label>
+              <div class="progress">
+                <div class="nivel" role="progressbar" style="width: 60%"></div>
+              </div>
+          </div>
+          <!-- CONTATOS -->
+          <div class="contato">
+            <label>
+              <img src="assets/img/contatos.png" alt="Contatos">
+              Contatos
+            </label>
+          </div>
+          <div class="bloco-contatos">
+            <p>
+              <i class="fa fa-whatsapp icone-contatos " aria-hidden="true"></i>
+              <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5581996103531" target="_blank" class="itens-contatos">
+                +55 81 99610-3531
+              </a>
+            </p>
+            <p>
+              <i class="fa fa-envelope icone-contatos " aria-hidden="true"></i>
+              <a href="mailto:pj38alves@gmail.com" target="_blank" class="itens-contatos">
+                pj38alves@gmail.com
+              </a>
+            </p>
+            <p>
+              <i class="fa fa-linkedin-square icone-contatos " aria-hidden="true"></i>
+              <a href="https://www.linkedin.com/in/paulo-alves3486" target="_blank" class="itens-contatos">
+                www.linkedin.com/in/paulo-alves3486
+              </a>
+            </p>
+            <p>
+              <i class="fa fa-github icone-contatos" aria-hidden="true"></i>
+              <a href="https://github.com/PauloAlves8039" target="_blank" class="itens-contatos">
+                www.github.com/PauloAlves8039
+              </a>
+            </p>
+            <p>
+              <i class="fa fa-twitter icone-contatos" aria-hidden="true"></i>
+              <a href="https://twitter.com/PauloJunior788" target="_blank" class="itens-contatos">
+                www.twitter.com/PauloJunior788
+              </a>
+            </p>
+            <br>
+          </div>
+        </section>
       </div>
     </div>
-
 
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="js/Bootstrap/bootstrap.min.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
+
   </body>
 </html>
