--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="assets/icon/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/Bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css" />
   </head>
   <body>
 
@@ -28,8 +27,8 @@
           </p>
           <h4>Objetivo</h4>
           <p>
-            Busco uma oportunidade com a finalidade de trabalhar como Desenvolvedor Júnior em um ambiente colaborativo e
-            desafiador, para que eu possa progredir na minha carreira profisssional e contribuir para o desenvolvimento da empresa.
+            Busco oportunidade para atuar como Desenvolvedor Júnior em um ambiente colaborativo e
+            desafiador, onde eu possa progredir na minha carreira profisssional e contribuir para o desenvolvimento da empresa.
           </p>
         </div>
       </section>
@@ -140,7 +139,70 @@
                 www.twitter.com/PauloJunior788
               </a>
             </p>
-            <br>
+          </div>
+        </section>
+
+        <!-- CONTEÚDO -->
+        <section class="col-xl-9  content">
+          <div class="bloco-experiencia">
+            <div class="icons" id="icon-experience">
+              <label class="titutos">
+                <img src="assets/img/trabalho.png" alt="Experiência">
+                Experiência Profissional
+              </label>
+            </div>
+            <h4>Analista Júnior</h4>
+            <h6>Accenture do Brasil LTDA (Dezembro 2018 á Julho 2019)</h6>
+            <p>
+              Atuava com desenvolvimento de aplicações em nuvem no ecossistema do CRM Salesforce,
+              usando a linguagem Apex, o Framework Lightning Components e tecnologias de desenvolvimento web (HTML, CSS e Javascript).
+            </p>
+            <h4>Suporte Técnico</h4>
+            <h6>Build Tecnologia LTDA (Dezembro 2015 á Agosto 2016)</h6>
+            <p>
+              Prestava suporte técnico presencial e remoto para usuários de sistemas com automação comercial,
+              realizava atividades preventivas com hardwares, configurações de rateadores, impressoras em redes locais.
+            </p>
+            <h4>Técnico em Informática</h4>
+            <h6>Wanderlei & Costa LTDA (Dezembro 2012 á Setembro 2019)</h6>
+            <p>
+              Realizava atividades com ênfase em hardwares voltadas a manutenção, montagem, limpeza de microcomputadores e
+              teste superficiais em periféricos, também fazia intalações de softwares e sistemas operacionais.
+            </p>
+          </div>
+          <hr>
+          <div class="bloco-formacao">
+            <div class="icons" id="icon-education">
+              <label class="titutos">
+                <img src="assets/img/educacao.png" alt="Educação">
+                Formação Acadêmica
+              </label>
+            </div>
+            <h5>Análise e Desenvolvimento de Sistemas</h5>
+            <p>Universidade Estácio de Sá (Fevereiro 2013 á Agosto 2016)</p>
+          </div>
+          <hr>
+          <div class="bloco-certificado">
+            <div class="icons" id="icon-certificates">
+              <label class="titutos">
+                <img src="assets/img/certificados.png" alt="Certificados">
+                Certificados
+              </label>
+            </div>
+            <p>Scrum Fundamentals Certified - SCRUMstudy (Outubro 2019)</p>
+            <p>Scrum Foundation Profissional Certificate - CertiProf (Junho 2020)</p>
+          </div>
+          <hr>
+          <div class="bloco-certificado">
+            <div class="icons" id="icon-certificates">
+              <label class="titutos">
+                <img src="assets/img/capacitacao.png" alt="Capacitação">
+                Capacitação
+              </label>
+            </div>
+            <p>Desenvolvedor Front-end Júnior - TreinaWeb (Setembro 2019)</p>
+            <p>MongoDB, Express, Angular.Js e Node.Js - Udemy (Novembro 2019)</p>
+            <p>Desenvolvedor Full-Stack - Digital Innovation One (Em andamento)</p>
           </div>
         </section>
       </div>
