Ajuste de cores

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h1><b>Paulo Alves</b></h1>
           <h3>Desenvolvedor de Software</h3>
           <hr>
-          <h4>Sobre min</h4>
+          <h4>Sobre mim</h4>
           <p>
             Brasileiro, solteiro, 40 anos, natural de Recife-PE.
           </p>
