--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="assets/icon/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/Bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
@@ -34,7 +35,7 @@
       </section>
     </div>
 
-    <!-- CONTEUDO -->
+    <!-- CONTEÚDO -->
     <div class="container">
       <div class="row">
         <!-- SIDEBAR -->
