Atualizando habilidades e capacitação

--- a/index.html
+++ b/index.html
@@ -64,10 +64,6 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 73%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>SQL</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 77%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
             <label>Node.Js</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 72%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -83,6 +79,10 @@
             <label>Java</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 82%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>MySQL</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 77%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <!-- IDIOMAS -->
@@ -201,9 +201,10 @@
                 Capacitação
               </label>
             </div>
-            <p>Desenvolvedor Front-end Júnior - TreinaWeb (Setembro 2019)</p>
-            <p>MongoDB, Express, Angular.Js e Node.Js - Udemy (Novembro 2019)</p>
-            <p>Desenvolvedor Full-Stack - Digital Innovation One (Em andamento)</p>
+            <p>Formação Desenvolvedor C# Júnior - TreinaWeb (Setembro 2019)</p>
+            <p>Formação Desenvolvedor Front-end Júnior - TreinaWeb (Setembro 2019)</p>
+            <p>Formação Desenvolvedor Java Júnior - TreinaWeb (Março 2020)</p>
+            <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Em andamento)</p>
           </div>
         </section>
       </div>
