--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h4>Objetivo</h4>
           <p>
             Busco oportunidade para atuar como Desenvolvedor Júnior em um ambiente colaborativo e
-            desafiador, onde eu possa progredir na minha carreira profisssional e contribuir para o desenvolvimento da empresa.
+            desafiador, onde eu possa progredir na minha carreira profissional e contribuir para o desenvolvimento da empresa.
           </p>
         </div>
       </section>
@@ -201,9 +201,9 @@
                 Capacitação
               </label>
             </div>
-            <p>Formação Desenvolvedor C# Júnior - TreinaWeb (Setembro 2019)</p>
             <p>Formação Desenvolvedor Front-end Júnior - TreinaWeb (Setembro 2019)</p>
             <p>Formação Desenvolvedor Java Júnior - TreinaWeb (Março 2020)</p>
+            <p>Formação Desenvolvedor ASP.NET Full-Stack (Junho 2020)</p>
             <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Em andamento)</p>
           </div>
         </section>
