--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 85%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>ASP.NET MVC5</label>
+            <label>ASP.NET</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 75%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -80,7 +80,7 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 82%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>MySQL</label>
+            <label>SQL</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 77%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -201,10 +201,10 @@
                 Capacitação
               </label>
             </div>
-            <p>Formação Desenvolvedor Front-end Júnior - TreinaWeb (Setembro 2019)</p>
             <p>Formação Desenvolvedor Java Júnior - TreinaWeb (Março 2020)</p>
-            <p>Formação Desenvolvedor ASP.NET Full-Stack (Junho 2020)</p>
-            <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Em andamento)</p>
+            <p>Formação Desenvolvedor ASP.NET Full-Stack (Julho 2020)</p>
+            <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
+            <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Em andamento)</p>
           </div>
         </section>
       </div>
