Atualizando capacitação e habilidades

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 73%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>Node.Js</label>
+            <label>Angular</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 52%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>Node.js</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 72%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -80,9 +84,13 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 82%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>SQL</label>
+            <label>MySQL</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 77%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>Azure</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 45%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <!-- IDIOMAS -->
@@ -201,10 +209,10 @@
                 Capacitação
               </label>
             </div>
-            <p>Formação Desenvolvedor Java Júnior - TreinaWeb (Março 2020)</p>
             <p>Formação Desenvolvedor ASP.NET Full-Stack (Julho 2020)</p>
             <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
-            <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Em andamento)</p>
+            <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Junho 2020)</p>
+            <p>Formação Analista de banco de dados Júnior - TreinaWeb (Em andamento)</p>
           </div>
         </section>
       </div>
