--- a/index.html
+++ b/index.html
@@ -48,49 +48,49 @@
           </div>
           <div class="bloco-habilidades">
             <!-- HABILIDADES -->
-            <label>HTML</label>
+            <label>HTML/CSS</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>CSS</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 70%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 75%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Javascript</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 80%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 78%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Bootstrap</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 73%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 71%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Angular</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 52%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Node.js</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 72%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 62%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>C#</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 85%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 75%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>ASP.NET</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 75%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 65%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Java</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 82%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 71%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>MySQL</label>
+            <label>SQL</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 77%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 72%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Azure</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 45%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 37%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>Git</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <!-- IDIOMAS -->
