Adicionando habilidade e capacitação

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
+            <label>Docker</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 48%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
           <!-- IDIOMAS -->
           <div class="idiomas">
@@ -209,10 +213,10 @@
                 Capacitação
               </label>
             </div>
-            <p>Formação Desenvolvedor ASP.NET Full-Stack (Julho 2020)</p>
             <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
-            <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Junho 2020)</p>
-            <p>Formação Analista de banco de dados Júnior - TreinaWeb (Em andamento)</p>
+            <p>Formação Analista DevOps Júnior - TreinaWeb (Julho 2020)</p>
+            <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Julho 2020)</p>
+            <p>Formação Analista de banco de dados Júnior - TreinaWeb (Em andamento)</p>            
           </div>
         </section>
       </div>
