--- a/index.html
+++ b/index.html
@@ -92,10 +92,6 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>Docker</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 48%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
           </div>
           <!-- IDIOMAS -->
           <div class="idiomas">
@@ -198,30 +194,18 @@
           <div class="bloco-certificado">
             <div class="icons" id="icon-certificates">
               <label class="titutos">
-                <img src="assets/img/certificados.png" alt="Certificados">
-                Certificados
-              </label>
-            </div>
-            <p>Scrum Fundamentals Certified - SCRUMstudy (Outubro 2019)</p>
-            <p>Scrum Foundation Profissional Certificate - CertiProf (Junho 2020)</p>
-          </div>
-          <hr>
-          <div class="bloco-certificado">
-            <div class="icons" id="icon-certificates">
-              <label class="titutos">
                 <img src="assets/img/capacitacao.png" alt="Capacitação">
                 Capacitação
               </label>
             </div>
+            <p>Formação Desenvolvedor Java Júnior - TreinaWeb (Março 2020)</p>
             <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
-            <p>Formação Analista DevOps Júnior - TreinaWeb (Julho 2020)</p>
             <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Julho 2020)</p>
             <p>Formação Analista de banco de dados Júnior - TreinaWeb (Em andamento)</p>            
           </div>
         </section>
       </div>
     </div>
-
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
