--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@
             </div>
             <p>Formação Desenvolvedor Java Júnior - TreinaWeb (Março 2020)</p>
             <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
+            <p>Formação Desenvolvedor ASP.NET Full-Stack - TreinaWeb (Julho 2020)</p>
             <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Julho 2020)</p>
-            <p>Formação Analista de banco de dados Júnior - TreinaWeb (Em andamento)</p>            
+            <p>Formação Analista de banco de dados Júnior - TreinaWeb (Agosto 2020)</p>            
           </div>
         </section>
       </div>
