--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
             <p>Formação Desenvolvedor ASP.NET Full-Stack - TreinaWeb (Julho 2020)</p>
             <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Julho 2020)</p>
-            <p>Formação Analista de banco de dados Júnior - TreinaWeb (Agosto 2020)</p>            
+            <p>Formação Analista de Banco de Dados Júnior - TreinaWeb (Agosto 2020)</p>            
           </div>
         </section>
       </div>
