--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <label>Javascript</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 78%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 68%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Bootstrap</label>
             <div class="progress">
@@ -64,15 +64,11 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>Node.js</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 62%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
             <label>C#</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 75%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>ASP.NET</label>
+            <label>.NET Core</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 65%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -86,11 +82,15 @@
             </div>
             <label>Azure</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 37%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 22%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Git</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <label>Scrum e Kanban</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 45%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <!-- IDIOMAS -->
@@ -160,6 +160,12 @@
                 Experiência Profissional
               </label>
             </div>
+            <h4>Analista de Desenvolvimento Júnior</h4>
+            <h6>Banco Carrefour e Soluções Financeiras S/A. (Outubro 2020 á Abril 2021)</h6>
+            <p>
+              Atuava em um programa temporário de 6 meses para novos desenvolvedores em um projeto de Aquisição de novos clientes, no qual utilizava as tecnologias 
+              .NET Core, linguagem C#, Angular, SQL Server, NUnit, Docker e Metodologias Ágeis(Scrum e Kanban). 
+            </p>
             <h4>Analista Júnior</h4>
             <h6>Accenture do Brasil LTDA (Dezembro 2018 á Julho 2019)</h6>
             <p>
@@ -171,12 +177,6 @@
             <p>
               Prestava suporte técnico presencial e remoto para usuários de sistemas com automação comercial,
               realizava atividades preventivas com hardwares, configurações de rateadores, impressoras em redes locais.
-            </p>
-            <h4>Técnico em Informática</h4>
-            <h6>Wanderlei & Costa LTDA (Dezembro 2012 á Setembro 2019)</h6>
-            <p>
-              Realizava atividades com ênfase em hardwares voltadas a manutenção, montagem, limpeza de microcomputadores e
-              teste superficiais em periféricos, também fazia intalações de softwares e sistemas operacionais.
             </p>
           </div>
           <hr>
