--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <hr>
           <h4>Sobre mim</h4>
           <p>
-            Brasileiro, solteiro, 40 anos, natural de Recife-PE.
+            Brasileiro, solteiro, 41 anos, natural de Recife-PE.
           </p>
           <h4>Objetivo</h4>
           <p>
@@ -74,11 +74,11 @@
             </div>
             <label>Java</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 71%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 65%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>SQL</label>
             <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 72%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="nivel" role="progressbar" style="width: 63%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <label>Azure</label>
             <div class="progress">
@@ -176,7 +176,7 @@
             <h6>Build Tecnologia LTDA (Dezembro 2015 á Agosto 2016)</h6>
             <p>
               Prestava suporte técnico presencial e remoto para usuários de sistemas com automação comercial,
-              realizava atividades preventivas com hardwares, configurações de rateadores, impressoras em redes locais.
+              realizava atividades preventivas com hardwares, configurações de roteadores, impressoras em redes locais.
             </p>
           </div>
           <hr>
