--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 22%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
+            <label>Flutter</label>
+            <div class="progress">
+              <div class="nivel" role="progressbar" style="width: 30%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
             <label>Git</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
