--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <label>Scrum e Kanban</label>
+            <label>Scrum/Kanban</label>
             <div class="progress">
               <div class="nivel" role="progressbar" style="width: 45%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
