--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-xl-9 col-lg-8 col-md-6 col-sm-12"> 
           <h1><b>Paulo Alves</b></h1>
-          <h3>Desenvolvedor de Software</h3>
+          <h3>Desenvolvedor Web</h3>
           <hr>
           <h4>Sobre mim</h4>
           <p>
@@ -28,8 +28,8 @@
           </p>
           <h4>Objetivo</h4>
           <p>
-            Busco oportunidade para atuar como Desenvolvedor Júnior em um ambiente colaborativo e
-            desafiador, onde eu possa progredir na minha carreira profissional e contribuir para o desenvolvimento da empresa.
+            Busco oportunidade para atuar como Desenvolvedor Web Júnior em um ambiente colaborativo e
+            desafiador, onde eu possa aplicar de forma transparente e responsável as minhas habilidades.
           </p>
         </div>
       </section>
@@ -40,80 +40,6 @@
       <div class="row">
         <!-- SIDEBAR -->
         <section class="col-xl-3 col-lg-4 col-md-12 col-sm-12 sidebar">
-          <div class="habilidades">
-            <label>
-              <img src="assets/img/habilidades.png" alt="Habilidades">
-              Habilidades
-            </label>
-          </div>
-          <div class="bloco-habilidades">
-            <!-- HABILIDADES -->
-            <label>HTML/CSS</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 75%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>Javascript</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 68%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>Bootstrap</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 71%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>Angular</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>C#</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 75%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>.NET Core</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 65%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>Java</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 65%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>SQL</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 63%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>Azure</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 22%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>Flutter</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 30%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>Git</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 51%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <label>Scrum/Kanban</label>
-            <div class="progress">
-              <div class="nivel" role="progressbar" style="width: 45%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-          <!-- IDIOMAS -->
-          <div class="idiomas">
-            <label>
-              <img src="assets/img/idioma.png" alt="Idiomas">
-              Idiomas
-            </label>
-          </div>
-          <div class="bloco-idioma"> 
-            <label>Português</label>
-              <div class="progress">
-                <div class="nivel" role="progressbar" style="width: 100%"></div>
-              </div>
-              <label>Inglês</label>
-              <div class="progress">
-                <div class="nivel" role="progressbar" style="width: 60%"></div>
-              </div>
-          </div>
           <!-- CONTATOS -->
           <div class="contato">
             <label>
@@ -125,7 +51,7 @@
             <p>
               <i class="fa fa-whatsapp icone-contatos " aria-hidden="true"></i>
               <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5581996103531" target="_blank" class="itens-contatos">
-                +55 81 99610-3531
+                (81) 99610-3531
               </a>
             </p>
             <p>
@@ -153,6 +79,66 @@
               </a>
             </p>
           </div>
+          <!-- HABILIDADES -->
+          <div class="habilidades">
+            <label>
+              <img src="assets/img/habilidades.png" alt="Habilidades">
+              Habilidades
+            </label>
+          </div>
+          <div class="bloco-habilidades">            
+            <div>
+                <label>HTML5/CSS3</label>
+            </div>
+            <div>
+                <label>JavaScript</label>
+            </div>
+            <div>
+                <label>Bootstrap</label>
+            </div>
+            <div>
+                <label>Angular</label>
+            </div>
+            <div>
+                <label>.NET Core/ASP.NET</label>
+            </div>
+            <div>
+                <label>C#</label>
+            </div>
+            <div>
+                <label>TDD/ NUnit</label>
+            </div>
+            <div>
+                <label>MySQL/ SQL Server</label>
+            </div>
+            <div>
+                <label>Git/GitHub</label>
+            </div>
+            <div>
+                <label>Scrum/Kanban</label>
+            </div>
+            <div>
+                <label>Docker</label>
+            </div>
+            <div>
+                <label>Azure</label>
+            </div>            
+          </div>
+          <!-- IDIOMAS -->
+          <div class="idiomas">
+            <label>
+              <img src="assets/img/idioma.png" alt="Idiomas">
+              Idiomas
+            </label>
+          </div>
+          <div class="bloco-idioma"> 
+            <div>
+                <label>Português: Nativo</label>
+              </div>
+              <label>Inglês: Básico</label>
+              <div>
+              </div>
+          </div>          
         </section>
 
         <!-- CONTEÚDO -->
@@ -165,10 +151,10 @@
               </label>
             </div>
             <h4>Analista de Desenvolvimento Júnior</h4>
-            <h6>Banco Carrefour e Soluções Financeiras S/A. (Outubro 2020 á Abril 2021)</h6>
+            <h6>Banco Carrefour e Soluções Financeiras S/A (Outubro 2020 á Abril 2021)</h6>
             <p>
-              Atuava em um programa temporário de 6 meses para novos desenvolvedores em um projeto de Aquisição de novos clientes, no qual utilizava as tecnologias 
-              .NET Core, linguagem C#, Angular, SQL Server, NUnit, Docker e Metodologias Ágeis(Scrum e Kanban). 
+              Atuava em um programa temporário de 6 meses para novos desenvolvedores em um projeto de aquisição para novos clientes utilizando as tecnologias 
+              ASP.NET Core, C#, Angular, SQL Server, NUnit, Docker e Metodologias Ágeis(Scrum e Kanban). 
             </p>
             <h4>Analista Júnior</h4>
             <h6>Accenture do Brasil LTDA (Dezembro 2018 á Julho 2019)</h6>
@@ -202,7 +188,6 @@
                 Capacitação
               </label>
             </div>
-            <p>Formação Desenvolvedor Java Júnior - TreinaWeb (Março 2020)</p>
             <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
             <p>Formação Desenvolvedor ASP.NET Full-Stack - TreinaWeb (Julho 2020)</p>
             <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Julho 2020)</p>
