Atualizando informações do currículo

--- a/index.html
+++ b/index.html
@@ -94,12 +94,6 @@
                 <label>JavaScript</label>
             </div>
             <div>
-                <label>Bootstrap</label>
-            </div>
-            <div>
-                <label>Angular</label>
-            </div>
-            <div>
                 <label>.NET Core/ASP.NET</label>
             </div>
             <div>
@@ -109,10 +103,10 @@
                 <label>TDD/ NUnit</label>
             </div>
             <div>
-                <label>MySQL/ SQL Server</label>
+                <label>SQL</label>
             </div>
             <div>
-                <label>Git/GitHub</label>
+                <label>Git</label>
             </div>
             <div>
                 <label>Scrum/Kanban</label>
@@ -150,6 +144,14 @@
                 Experiência Profissional
               </label>
             </div>
+            <h4>
+              Desenvolvedor Full Stack</h4>
+            <h6>Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021, até o presente momento)</h6>
+            <p>
+              Atua como o desenvolvimento e sustentação de aplicações web voltadas ao agronegócio utilizando as tecnologias 
+              .NET Framework, ASP.NET Core, C#, tecnologias de desenvolvimento web (HTML, CSS e Javascript), Ajax, Jquery. Vue.js,
+              PostgreSQL e Metodologias Ágeis(Scrum e Kanban).  
+            </p>
             <h4>Analista de Desenvolvimento Júnior</h4>
             <h6>Banco Carrefour e Soluções Financeiras S/A (Outubro 2020 á Abril 2021)</h6>
             <p>
@@ -161,12 +163,6 @@
             <p>
               Atuava com desenvolvimento de aplicações em nuvem no ecossistema do CRM Salesforce,
               usando a linguagem Apex, o Framework Lightning Components e tecnologias de desenvolvimento web (HTML, CSS e Javascript).
-            </p>
-            <h4>Suporte Técnico</h4>
-            <h6>Build Tecnologia LTDA (Dezembro 2015 á Agosto 2016)</h6>
-            <p>
-              Prestava suporte técnico presencial e remoto para usuários de sistemas com automação comercial,
-              realizava atividades preventivas com hardwares, configurações de roteadores, impressoras em redes locais.
             </p>
           </div>
           <hr>
