Atualizando informações sobre descrição

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <hr>
           <h4>Sobre mim</h4>
           <p>
-            Brasileiro, solteiro, 41 anos, natural de Recife-PE.
+            Brasileiro, solteiro, 43 anos, natural de Recife-PE.
           </p>
           <h4>Objetivo</h4>
           <p>
@@ -100,7 +100,7 @@
                 <label>C#</label>
             </div>
             <div>
-                <label>TDD/ NUnit</label>
+                <label>TDD</label>
             </div>
             <div>
                 <label>SQL</label>
@@ -146,7 +146,7 @@
             </div>
             <h4>
               Desenvolvedor Full Stack</h4>
-            <h6>Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021, até o presente momento)</h6>
+            <h6>Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021, Junho 2023)</h6>
             <p>
               Atua como o desenvolvimento e sustentação de aplicações web voltadas ao agronegócio utilizando as tecnologias 
               .NET Framework, ASP.NET Core, C#, tecnologias de desenvolvimento web (HTML, CSS e Javascript), Ajax, Jquery. Vue.js,
