--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </p>
           <h4>Objetivo</h4>
           <p>
-            Busco oportunidade para atuar como Desenvolvedor Web Júnior em um ambiente colaborativo e
+            Busco oportunidade para atuar como Desenvolvedor Web em um ambiente colaborativo e
             desafiador, onde eu possa aplicar de forma transparente e responsável as minhas habilidades.
           </p>
         </div>
@@ -146,9 +146,9 @@
             </div>
             <h4>
               Desenvolvedor Full Stack</h4>
-            <h6>Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021, Junho 2023)</h6>
+            <h6>Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021 á Junho 2023)</h6>
             <p>
-              Atua como o desenvolvimento e sustentação de aplicações web voltadas ao agronegócio utilizando as tecnologias 
+              Atuava na criação de novos projetos e sustentação de aplicações web voltadas ao agronegócio utilizando as tecnologias 
               .NET Framework, ASP.NET Core, C#, tecnologias de desenvolvimento web (HTML, CSS e Javascript), Ajax, Jquery. Vue.js,
               PostgreSQL e Metodologias Ágeis(Scrum e Kanban).  
             </p>
