Atualizando descrição sobre tecnologias

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <h6>Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021 á Junho 2023)</h6>
             <p>
               Atuava na criação de novos projetos e sustentação de aplicações web voltadas ao agronegócio utilizando as tecnologias 
-              .NET Framework, ASP.NET Core, C#, tecnologias de desenvolvimento web (HTML, CSS e Javascript), Ajax, Jquery. Vue.js,
+              .NET Framework, ASP.NET Core, C#, tecnologias de desenvolvimento web (HTML, CSS e JavaScript), Ajax, JQuery. Vue.js,
               PostgreSQL e Metodologias Ágeis(Scrum e Kanban).  
             </p>
             <h4>Analista de Desenvolvimento Júnior</h4>
@@ -162,7 +162,7 @@
             <h6>Accenture do Brasil LTDA (Dezembro 2018 á Julho 2019)</h6>
             <p>
               Atuava com desenvolvimento de aplicações em nuvem no ecossistema do CRM Salesforce,
-              usando a linguagem Apex, o Framework Lightning Components e tecnologias de desenvolvimento web (HTML, CSS e Javascript).
+              usando a linguagem Apex, o Framework Lightning Components e tecnologias de desenvolvimento web (HTML, CSS e JavaScript).
             </p>
           </div>
           <hr>
