--- a/index.html
+++ b/index.html
@@ -184,9 +184,8 @@
                 Capacitação
               </label>
             </div>
+            <p>Formação Arquiteto de Software - Desenvolvedor.io (Agosto 2022)</p>
             <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
-            <p>Formação Desenvolvedor ASP.NET Full-Stack - TreinaWeb (Julho 2020)</p>
-            <p>Bootcamp Cloud Computing & Serverless - Digital Innovation One  (Julho 2020)</p>
             <p>Formação Analista de Banco de Dados Júnior - TreinaWeb (Agosto 2020)</p>            
           </div>
         </section>
