Aplicando melhorias no estilo

--- a/index.html
+++ b/index.html
@@ -139,26 +139,25 @@
         <section class="col-xl-9  content">
           <div class="bloco-experiencia">
             <div class="icons" id="icon-experience">
-              <label class="titutos">
+              <label class="titulos">
                 <img src="assets/img/trabalho.png" alt="Experiência">
                 Experiência Profissional
               </label>
             </div>
-            <h4>
-              Desenvolvedor Full Stack</h4>
+            <h4 class="titulo-experiencia">Desenvolvedor Full Stack</h4>
             <h6>Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021 á Junho 2023)</h6>
             <p>
               Trabalhava com a criação de novos projetos e sustentação de aplicações web voltadas ao agronegócio utilizando as tecnologias 
               .NET Framework, ASP.NET Core, C#, tecnologias de desenvolvimento web (HTML, CSS e JavaScript), Ajax, JQuery. Vue.js,
               PostgreSQL e Metodologias Ágeis(Scrum e Kanban).  
             </p>
-            <h4>Analista de Desenvolvimento Júnior</h4>
+            <h4 class="titulo-experiencia">Analista de Desenvolvimento Júnior</h4>
             <h6>Banco Carrefour e Soluções Financeiras S/A (Outubro 2020 á Abril 2021)</h6>
             <p>
               Fazia parte de um programa temporário para novos desenvolvedores em um projeto de aquisição para novos clientes utilizando as tecnologias 
               ASP.NET Core, C#, Angular, SQL Server, NUnit, Docker e Metodologias Ágeis(Scrum e Kanban). 
             </p>
-            <h4>Analista Júnior</h4>
+            <h4 class="titulo-experiencia">Analista Júnior</h4>
             <h6>Accenture do Brasil LTDA (Dezembro 2018 á Julho 2019)</h6>
             <p>
               Atuava com desenvolvimento de aplicações em nuvem no ecossistema do CRM Salesforce,
@@ -168,7 +167,7 @@
           <hr>
           <div class="bloco-formacao">
             <div class="icons" id="icon-education">
-              <label class="titutos">
+              <label class="titulos">
                 <img src="assets/img/educacao.png" alt="Educação">
                 Formação Acadêmica
               </label>
@@ -179,7 +178,7 @@
           <hr>
           <div class="bloco-certificado">
             <div class="icons" id="icon-certificates">
-              <label class="titutos">
+              <label class="titulos">
                 <img src="assets/img/capacitacao.png" alt="Capacitação">
                 Capacitação
               </label>
