Alterando titulo de experiência

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
               Fazia parte de um programa temporário para novos desenvolvedores em um projeto de aquisição para novos clientes utilizando as tecnologias 
               ASP.NET Core, C#, Angular, SQL Server, NUnit, Docker e Metodologias Ágeis como Scrum e Kanban. 
             </p>
-            <h4 class="titulo-experiencia">Analista Júnior</h4>
+            <h4 class="titulo-experiencia">Analista de Sistemas Júnior</h4>
             <h6 class="titulo-empresa">Accenture do Brasil LTDA (Dezembro 2018 á Julho 2019)</h6>
             <p>
               Atuava com desenvolvimento de aplicações em nuvem no ecossistema do CRM Salesforce,
-              usando a linguagem Apex no backend, o Framework Lightning Components e tecnologias de desenvolvimento web HTML, CSS e JavaScript.
+              usando a linguagem Apex no backend, o Framework Lightning Components e tecnologias de desenvolvimento web HTML, CSS, JavaScript e Metodologias Ágeis como Scrum e Kanban.
             </p>
           </div>
           <hr>
